--- a/src/components/01-modules/alerts/_alert.scss
+++ b/src/components/01-modules/alerts/_alert.scss
@@ -1,2 +1,2 @@
-@import "../../scss/bootstrap-basics";
-@import "../../scss/bootstrap/alert";
+@import "../../../scss/bootstrap-basics";
+@import "../../../scss/bootstrap/alert";
