--- a/src/components/20-teaser-variants/media-object/media-object.hbs
+++ b/src/components/20-teaser-variants/media-object/media-object.hbs
@@ -1,23 +1,23 @@
 <div class="media">
-  {{# mediaLeft }}
-  <div class="media-left {{ mediaClass }}">
+  {{#mediaLeft }}
+  <div class="media-left {{ modificator }}">
     <a href="{{ url }}">
-      <img class="media-object" src="{{ mediaImage }}" alt="{{ alt }}">
+      <img class="media-object" src="{{ image }}" alt="{{ alt }}">
     </a>
   </div>
-  {{/ mediaLeft }}
+  {{/mediaLeft }}
+
   <div class="media-body">
-    <h4 class="media-heading">{{ heading }}</h4>
-    {{ text }}
-    {{# nestedMedia }}
-    {{> molecules-media }}
-    {{/ nestedMedia }}
+    <h4 class="media-headline">{{ headline }}</h4>
+    {{#content}}
+    <p>{{ text }}</p>
+    {{/content}}
   </div>
-  {{# mediaRight }}
-  <div class="media-right {{ mediaClass }}">
+  {{#mediaRight }}
+  <div class="media-right {{ modificator }}">
     <a href="{{ url }}">
-      <img class="media-object" src="{{ mediaImage }}" alt="{{ alt }}">
+      <img class="media-object" src="{{ image }}" alt="{{ alt }}">
     </a>
   </div>
-  {{/ mediaRight }}
+  {{/mediaRight }}
 </div>
