Am Media Object und Media List gewerkelt

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,4 +7,5 @@
 @import "../components/01-modules/button/button";
 @import "../components/20-teaser-variants/cards/card";
 @import "../components/20-teaser-variants/media-object/media-object";
+@import "../components/20-teaser-variants/media-list/media-list";
 @import "../components/20-teaser-variants/teaser/teaser-zdf";
